--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:elements": "ng build --prod && node build-script.js"
+    "build:elements": "ng build --prod && node build-script.js && wc elements/spotfire-wrapper.js"
   },
   "private": true,
   "dependencies": {
