spotfire-wrapper: add filter and marking
Add more examples
Change spotfire url to https://spotfire-next.cloud.tibco.com/spotfire/wp

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@webcomponents/custom-elements": "^1.1.1",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
+    "underscore": "^1.9.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
