Add config form begin the Spotfire dashboard (it flips on edit btn)

--- a/angular.json
+++ b/angular.json
@@ -113,5 +113,11 @@
       }
     }
   },
-  "defaultProject": "spotfire-wrapper"
+  "defaultProject": "spotfire-wrapper",
+  "schematics": {
+    "@schematics/angular:component": {
+      "prefix": "app",
+      "styleext": "scss"
+    }
+  }
 }
