--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "builddev:elements": "ng build  && node build-script.js && wc elements/spotfire-wrapper.js",
     "build:elements": "ng build --prod && node build-script.js && wc elements/spotfire-wrapper.js"
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^6.1.8",
+    "@angular/cdk": "^6.4.7",
     "@angular/common": "^6.1.8",
     "@angular/compiler": "^6.1.8",
     "@angular/core": "^6.1.8",
     "@angular/elements": "^6.1.8",
+    "@angular/forms": "^6.1.8",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "^6.1.8",
     "@angular/platform-browser-dynamic": "^6.1.8",
     "@webcomponents/custom-elements": "^1.2.0",
