--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^6.1.8",
     "@angular/platform-browser-dynamic": "^6.1.8",
     "@webcomponents/custom-elements": "^1.2.0",
+    "angular-2-local-storage": "^2.0.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.3.2",
     "underscore": "^1.9.1",
