--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.8",
+    "@angular/animations": "^6.1.9",
     "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.8",
-    "@angular/compiler": "^6.1.8",
-    "@angular/core": "^6.1.8",
-    "@angular/elements": "^6.1.8",
-    "@angular/forms": "^6.1.8",
+    "@angular/common": "^6.1.9",
+    "@angular/compiler": "^6.1.9",
+    "@angular/core": "^6.1.9",
+    "@angular/elements": "^6.1.9",
+    "@angular/forms": "^6.1.9",
     "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.8",
+    "@angular/platform-browser": "^6.1.9",
     "@angular/platform-browser-dynamic": "^6.1.8",
-    "@webcomponents/custom-elements": "^1.2.0",
+    "@webcomponents/custom-elements": "^1.2.1",
     "angular-2-local-storage": "^2.0.0",
     "core-js": "^2.5.4",
-    "rxjs": "^6.3.2",
+    "rxjs": "^6.3.3",
     "underscore": "^1.9.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.3",
-    "@angular/cli": "^6.2.3",
-    "@angular/compiler-cli": "^6.1.8",
-    "@angular/language-service": "^6.1.8",
+    "@angular-devkit/build-angular": "^0.8.4",
+    "@angular/cli": "^6.2.4",
+    "@angular/compiler-cli": "^6.1.9",
+    "@angular/language-service": "^6.1.9",
     "@types/jasmine": "^2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.11.0",
+    "@types/jasminewd2": "^2.0.4",
+    "@types/node": "^10.11.3",
     "codelyzer": "~4.4.4",
     "concat": "^1.0.3",
     "fs-extra": "^7.0.0",
