--- a/package.json
+++ b/package.json
@@ -13,41 +13,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.9",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.9",
-    "@angular/compiler": "^6.1.9",
-    "@angular/core": "^6.1.9",
-    "@angular/elements": "^6.1.9",
-    "@angular/forms": "^6.1.9",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.9",
-    "@angular/platform-browser-dynamic": "^6.1.8",
+    "@angular/animations": "^7.2.1",
+    "@angular/cdk": "^7.2.1",
+    "@angular/common": "^7.2.1",
+    "@angular/compiler": "^7.2.1",
+    "@angular/core": "^7.2.1",
+    "@angular/elements": "^7.2.1",
+    "@angular/forms": "^7.2.1",
+    "@angular/material": "^7.2.1",
+    "@angular/platform-browser": "^7.2.1",
+    "@angular/platform-browser-dynamic": "^7.2.1",
     "@webcomponents/custom-elements": "^1.2.1",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.2",
     "rxjs": "^6.3.3",
-    "zone.js": "^0.8.26"
+    "tslib": "^1.9.3",
+    "zone.js": "^0.8.28"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.4",
-    "@angular/cli": "^6.2.4",
-    "@angular/compiler-cli": "^6.1.9",
-    "@angular/language-service": "^6.1.9",
-    "@types/jasmine": "^2.8.8",
-    "@types/jasminewd2": "^2.0.4",
-    "@types/node": "^10.11.3",
-    "codelyzer": "~4.4.4",
+    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular/cli": "^7.2.2",
+    "@angular/compiler-cli": "^7.2.1",
+    "@angular/language-service": "^7.2.1",
+    "@types/jasmine": "^3.3.7",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^10.12.18",
+    "codelyzer": "~4.5.0",
     "concat": "^1.0.3",
-    "fs-extra": "^7.0.0",
-    "jasmine-core": "~3.2.1",
+    "fs-extra": "^7.0.1",
+    "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~3.1.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.4",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^1.3.1",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.12.1",
+    "typescript": "~3.2.4"
   }
 }
