--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "^7.2.2",
     "@angular/core": "^7.2.2",
     "@angular/elements": "^7.2.2",
+    "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "^7.2.2",
     "@angular/material": "^7.3.0",
     "@angular/platform-browser": "^7.2.2",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.3",
+    "@angular-devkit/build-ng-packagr": "~0.12.0",
     "@angular/cli": "^7.2.3",
     "@angular/compiler-cli": "^7.2.2",
     "@angular/language-service": "^7.2.2",
@@ -47,7 +49,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.4",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "ng-packagr": "^4.2.0",
     "ts-node": "~8.0.2",
+    "tsickle": ">=0.34.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.12.1",
     "typescript": "~3.2.4"
   }
