--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,14 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "spotfire-webplayer": [
+        "dist/spotfire-webplayer"
+      ],
+      "spotfire-webplayer/*": [
+        "dist/spotfire-webplayer/*"
+      ]
+    }
   }
 }
