Import spotfire-webplayer NPM package and spotfire-wrapper lib from S3

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build spotfire-webplayer && (cd dist/spotfire-webplayer/ ; npm pack) && npm install dist/spotfire-webplayer/spotfire-webplayer-0.0.1.tgz && npm run build:elements",
+    "build-webplayer": "ng build spotfire-webplayer && (cd dist/spotfire-webplayer/ ; npm pack)",
+    "build-wrapper": "npm run build:elements",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -13,44 +14,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.2",
-    "@angular/cdk": "^7.3.0",
-    "@angular/common": "^7.2.2",
-    "@angular/compiler": "^7.2.2",
-    "@angular/core": "^7.2.2",
-    "@angular/elements": "^7.2.2",
+    "@angular/animations": "^7.2.8",
+    "@angular/cdk": "^7.3.4",
+    "@angular/common": "^7.2.8",
+    "@angular/compiler": "^7.2.8",
+    "@angular/core": "^7.2.8",
+    "@angular/elements": "^7.2.8",
     "@angular/flex-layout": "^7.0.0-beta.23",
-    "@angular/forms": "^7.2.2",
-    "@angular/material": "^7.3.0",
-    "@angular/platform-browser": "^7.2.2",
-    "@angular/platform-browser-dynamic": "^7.2.2",
+    "@angular/forms": "^7.2.8",
+    "@angular/material": "^7.3.4",
+    "@angular/platform-browser": "^7.2.8",
+    "@angular/platform-browser-dynamic": "^7.2.8",
     "@webcomponents/custom-elements": "^1.2.1",
-    "core-js": "^2.6.3",
-    "rxjs": "^6.3.3",
+    "core-js": "^2.6.5",
+    "rxjs": "^6.4.0",
+    "spotfire-webplayer": "https://s3-us-west-2.amazonaws.com/cec-library/spotfire-webplayer-0.0.1.tgz",
     "tslib": "^1.9.3",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.3",
+    "@angular-devkit/build-angular": "^0.12.4",
     "@angular-devkit/build-ng-packagr": "~0.12.0",
-    "@angular/cli": "^7.2.3",
-    "@angular/compiler-cli": "^7.2.2",
-    "@angular/language-service": "^7.2.2",
-    "@types/jasmine": "^3.3.8",
+    "@angular/cli": "^7.3.5",
+    "@angular/compiler-cli": "^7.2.8",
+    "@angular/language-service": "^7.2.8",
+    "@types/jasmine": "^3.3.9",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^10.12.19",
+    "@types/node": "^10.12.30",
     "codelyzer": "~4.5.0",
     "concat": "^1.0.3",
     "fs-extra": "^7.0.1",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.4",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "ng-packagr": "^4.2.0",
-    "ts-node": "~8.0.2",
+    "ts-node": "^8.0.3",
     "tsickle": ">=0.34.0",
     "tslib": "^1.9.0",
     "tslint": "~5.12.1",
