--- a/projects/spotfire-webplayer/package.json
+++ b/projects/spotfire-webplayer/package.json
@@ -1,8 +1,16 @@
 {
-  "name": "spotfire-webplayer",
+  "name": "@tibco/spotfire-wrapper",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^7.3.0",
     "@angular/core": "^7.3.0"
-  }
+  },
+  "author": {
+    "name": "Nicolas Deroche"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TIBCOSoftware/spotfire-wrapper.git"
+  },
+  "homepage": "https://github.com/TIBCOSoftware/spotfire-wrapper"
 }
