--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spotfire-wrapper",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -12,7 +12,12 @@
     "builddev:elements": "ng build  && node build-script.js && wc elements/spotfire-wrapper.js",
     "build:elements": "ng build --prod && node build-script.js && wc elements/spotfire-wrapper.js"
   },
-  "private": true,
+  "author": {
+    "name": "Nicolas Deroche",
+    "email" : "nderoche@tibco.com",
+    "url" : "http://www.tibco.com"
+  },
+  "private": false,
   "dependencies": {
     "@angular/animations": "^7.2.8",
     "@angular/cdk": "^7.3.4",
@@ -28,7 +33,6 @@
     "@webcomponents/custom-elements": "^1.2.1",
     "core-js": "^2.6.5",
     "rxjs": "^6.4.0",
-    "tslib": "^1.9.3",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
@@ -56,5 +60,10 @@
     "tslib": "^1.9.0",
     "tslint": "~5.12.1",
     "typescript": "~3.2.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TIBCOSoftware/spotfire-wrapper.git"
+  },
+  "homepage": "https://github.com/TIBCOSoftware/spotfire-wrapper"
 }
