--- a/projects/spotfire-webplayer/package.json
+++ b/projects/spotfire-webplayer/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@tibco/spotfire-wrapper",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": false,
   "peerDependencies": {
     "@angular/common": "^7.2.0",
     "@angular/core": "^7.2.0"
   },
   "author": {
-    "name": "Nicolas Deroche"
+    "name": "Nicolas Deroche",
+    "email" : "nderoche@tibco.com",
+    "url" : "http://www.tibco.com"
   },
   "publishConfig": {
     "registry": "http://artifacts.tibco.com:8081/artifactory/api/npm/npm-general"
