Added schematics Not fully working (it builds but schematics not recognized when running ng add...) To be continued

--- a/angular.json
+++ b/angular.json
@@ -176,7 +176,7 @@
         }
       }
     },
-    "spotfire-webplayer": {
+    "zspotfire-webplayer": {
       "root": "projects/spotfire-webplayer",
       "sourceRoot": "projects/spotfire-webplayer/src",
       "projectType": "library",
