--- a/package.json
+++ b/package.json
@@ -19,44 +19,44 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "^7.2.8",
-    "@angular/cdk": "^7.3.4",
-    "@angular/common": "^7.2.8",
-    "@angular/compiler": "^7.2.8",
-    "@angular/core": "^7.2.8",
-    "@angular/elements": "^7.2.8",
-    "@angular/flex-layout": "^7.0.0-beta.23",
-    "@angular/forms": "^7.2.8",
-    "@angular/material": "^7.3.4",
-    "@angular/platform-browser": "^7.2.8",
-    "@angular/platform-browser-dynamic": "^7.2.8",
-    "@webcomponents/custom-elements": "^1.2.1",
+    "@angular/animations": "^7.2.14",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.14",
+    "@angular/compiler": "^7.2.14",
+    "@angular/core": "^7.2.14",
+    "@angular/elements": "^7.2.14",
+    "@angular/flex-layout": "^7.0.0-beta.24",
+    "@angular/forms": "^7.2.14",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.14",
+    "@angular/platform-browser-dynamic": "^7.2.14",
+    "@webcomponents/custom-elements": "^1.2.4",
     "core-js": "^2.6.5",
-    "rxjs": "^6.4.0",
+    "rxjs": "^6.5.1",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.12.4",
     "@angular-devkit/build-ng-packagr": "~0.12.0",
-    "@angular/cli": "^7.3.5",
-    "@angular/compiler-cli": "^7.2.8",
-    "@angular/language-service": "^7.2.8",
-    "@types/jasmine": "^3.3.9",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.14",
+    "@angular/language-service": "^7.2.14",
+    "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^10.12.30",
+    "@types/node": "^10.14.6",
     "codelyzer": "~4.5.0",
     "concat": "^1.0.3",
     "fs-extra": "^7.0.1",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.1",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "ng-packagr": "^4.2.0",
-    "ts-node": "^8.0.3",
-    "tsickle": ">=0.34.0",
+    "ts-node": "^8.1.0",
+    "tsickle": "^0.35.0",
     "tslib": "^1.9.0",
     "tslint": "~5.12.1",
     "typescript": "~3.2.4"
