--- a/package.json
+++ b/package.json
@@ -19,47 +19,47 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "^7.2.15",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "^7.2.15",
-    "@angular/compiler": "^7.2.15",
-    "@angular/core": "^7.2.15",
-    "@angular/elements": "^7.2.15",
-    "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "^7.2.15",
-    "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^7.2.15",
-    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/animations": "^8.1.0",
+    "@angular/cdk": "^8.0.2",
+    "@angular/common": "^8.1.0",
+    "@angular/compiler": "^8.1.0",
+    "@angular/core": "^8.1.0",
+    "@angular/elements": "^8.1.0",
+    "@angular/flex-layout": "^8.0.0-beta.26",
+    "@angular/forms": "^8.1.0",
+    "@angular/material": "^8.0.2",
+    "@angular/platform-browser": "^8.1.0",
+    "@angular/platform-browser-dynamic": "^8.1.0",
     "@webcomponents/custom-elements": "^1.2.4",
-    "core-js": "^2.6.5",
+    "core-js": "^3.1.4",
     "rxjs": "^6.5.2",
-    "zone.js": "^0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.4",
-    "@angular-devkit/build-ng-packagr": "~0.12.0",
-    "@angular/cli": "^7.3.9",
-    "@angular/compiler-cli": "^7.2.15",
-    "@angular/language-service": "^7.2.15",
-    "@types/jasmine": "^3.3.12",
+    "@angular-devkit/build-angular": "~0.801.0",
+    "@angular-devkit/build-ng-packagr": "~0.801.0",
+    "@angular/cli": "^8.1.0",
+    "@angular/compiler-cli": "^8.1.0",
+    "@angular/language-service": "^8.1.0",
+    "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^10.14.6",
-    "codelyzer": "~4.5.0",
+    "@types/node": "^12.6.2",
+    "codelyzer": "^5.0.1",
     "concat": "^1.0.3",
-    "fs-extra": "^7.0.1",
-    "jasmine-core": "~3.3.0",
+    "fs-extra": "^8.1.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^4.2.0",
-    "ts-node": "^8.1.0",
+    "ng-packagr": "^5.1.0",
+    "ts-node": "^8.3.0",
     "tsickle": "^0.35.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.12.1",
-    "typescript": "~3.2.4"
+    "tslib": "^1.10.0",
+    "tslint": "~5.18.0",
+    "typescript": "~3.4.3"
   },
   "repository": {
     "type": "git",
