--- a/projects/spotfire-webplayer/package.json
+++ b/projects/spotfire-webplayer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tibco/spotfire-wrapper",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "private": false,
   "scripts": {
     "build": "../../node_modules/.bin/tsc -p tsconfig.schematics.json",
@@ -13,7 +13,10 @@
   },
   "peerDependencies": {
     "@angular/common": "^8.0.0",
-    "@angular/core": "^8.0.0"
+    "@angular/core": "^8.0.0",
+    "@angular/cdk": "~8.0.1",
+    "@angular/material": "~8.0.1",
+    "@angular/flex-layout": "~8.0.0-beta"
   },
   "schematics": "./schematics/collection.json",
   "author": {
