--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spotfire-wrapper",
-  "version": "1.0.0",
+  "version": "0.4.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +8,6 @@
     "build-wrapper": "npm run build:elements",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
     "builddev:elements": "ng build  && node build-script.js && wc elements/spotfire-wrapper.js",
     "build:elements": "ng build --prod && node build-script.js && wc elements/spotfire-wrapper.js",
     "sptf:watch": "(cd projects/spotfire-webplayer ; ../../node_modules/.bin/tsc -w  --pretty -p tsconfig.schematics.json)",
@@ -24,48 +23,48 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "^8.1.0",
-    "@angular/cdk": "^8.0.2",
-    "@angular/common": "^8.1.0",
-    "@angular/compiler": "^8.1.0",
-    "@angular/core": "^8.1.0",
-    "@angular/elements": "^8.1.0",
-    "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "^8.1.0",
-    "@angular/material": "^8.0.2",
-    "@angular/platform-browser": "^8.1.0",
-    "@angular/platform-browser-dynamic": "^8.1.0",
-    "@webcomponents/custom-elements": "^1.2.4",
-    "core-js": "^3.1.4",
-    "rxjs": "^6.5.2",
-    "zone.js": "~0.9.1"
+    "@angular/animations": "8.1.0",
+    "@angular/cdk": "8.0.2",
+    "@angular/common": "8.1.0",
+    "@angular/compiler": "8.1.0",
+    "@angular/core": "8.1.0",
+    "@angular/elements": "8.1.0",
+    "@angular/flex-layout": "8.0.0-beta.26",
+    "@angular/forms": "8.1.0",
+    "@angular/material": "8.0.2",
+    "@angular/platform-browser": "8.1.0",
+    "@angular/platform-browser-dynamic": "8.1.0",
+    "@webcomponents/custom-elements": "1.2.4",
+    "core-js": "3.1.4",
+    "rxjs": "6.5.2",
+    "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.0",
-    "@angular-devkit/build-ng-packagr": "~0.801.0",
-    "@angular/cli": "^8.1.0",
-    "@angular/compiler-cli": "^8.1.0",
-    "@angular/language-service": "^8.1.0",
-    "@types/jasmine": "^3.3.13",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^12.6.2",
-    "codelyzer": "^5.0.1",
-    "concat": "^1.0.3",
-    "cpx": "^1.5.0",
-    "fs-extra": "^8.1.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.5",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^5.1.0",
-    "ts-node": "^8.3.0",
-    "tsickle": "^0.35.0",
-    "tslib": "^1.10.0",
-    "tslint": "~5.18.0",
-    "typescript": "~3.4.3"
+    "@angular-devkit/build-angular": "0.801.0",
+    "@angular-devkit/build-ng-packagr": "0.801.0",
+    "@angular/cli": "8.1.0",
+    "@angular/compiler-cli": "8.1.0",
+    "@angular/language-service": "8.1.0",
+    "@types/jasmine": "3.3.13",
+    "@types/jasminewd2": "2.0.6",
+    "@types/node": "12.6.2",
+    "codelyzer": "5.0.1",
+    "concat": "1.0.3",
+    "cpx": "1.5.0",
+    "fs-extra": "8.1.0",
+    "jasmine-core": "3.4.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "4.1.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage-istanbul-reporter": "2.0.5",
+    "karma-jasmine": "2.0.1",
+    "karma-jasmine-html-reporter": "1.4.2",
+    "ng-packagr": "5.1.0",
+    "ts-node": "8.3.0",
+    "tsickle": "0.35.0",
+    "tslib": "1.10.0",
+    "tslint": "5.18.0",
+    "typescript": "3.4.3"
   },
   "repository": {
     "type": "git",
