--- a/projects/spotfire-webplayer/package.json
+++ b/projects/spotfire-webplayer/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@tibco/spotfire-wrapper",
-  "version": "0.4.5",
+  "version": "0.5.0",
   "private": false,
   "scripts": {
     "build": "../../node_modules/.bin/tsc -p tsconfig.schematics.json",
     "copy:schemas": "../../node_modules/.bin/cpx -v \"schematics/**/schema.json\" ../../dist/spotfire-webplayer/schematics",
     "copy:files": "../../node_modules/.bin/cpx -v -p \"schematics/**/files/**\" ../../dist/spotfire-webplayer/schematics",
     "copy:assets": "../../node_modules/.bin/cpx -v -p \"assets/*\" ../../dist/spotfire-webplayer/assets",
+    "copy:tps": "../../node_modules/.bin/cpx -v -p \"3rdpartylicenses.txt\" ../../dist/spotfire-webplayer",
     "copy:styles": "../../node_modules/.bin/cpx -v -p \"styles/*\" ../../dist/spotfire-webplayer/styles",
     "copy:collection": "cp -v schematics/collection.json ../../dist/spotfire-webplayer/schematics/collection.json",
-    "postbuild": "npm run copy:schemas && npm run copy:files && npm run copy:styles && npm run copy:collection"
+    "postbuild": "npm run copy:schemas && npm run copy:files && npm run copy:tps && npm run copy:styles && npm run copy:collection"
   },
   "peerDependencies": {
     "@angular/common": "^8.0.0",
@@ -24,6 +25,8 @@
     "email": "nderoche@tibco.com",
     "url": "http://www.tibco.com"
   },
+  "keywords": ["tibco", "spotfire"],
+  "license": "SEE LICENSE IN LICENSE",
   "publishConfig": {
     "registry": "http://artifacts.tibco.com:8081/artifactory/api/npm/npm-general"
   },
