--- a/projects/spotfire-wrapper/package.json
+++ b/projects/spotfire-wrapper/package.json
@@ -1,16 +1,15 @@
 {
   "name": "@tibco/spotfire-wrapper",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "private": false,
   "scripts": {
     "build": "../../node_modules/.bin/tsc -p tsconfig.schematics.json",
     "copy:schemas": "../../node_modules/.bin/cpx -v \"schematics/**/schema.json\" ../../build/spotfire-wrapper/schematics",
     "copy:files": "../../node_modules/.bin/cpx -v -p \"schematics/**/files/**\" ../../build/spotfire-wrapper/schematics",
     "copy:assets": "../../node_modules/.bin/cpx -v -p \"assets/*\" ../../build/spotfire-wrapper/assets",
-    "copy:tps": "../../node_modules/.bin/cpx -v -p \"3rdpartylicenses.txt\" ../../build/spotfire-wrapper",
     "copy:styles": "../../node_modules/.bin/cpx -v -p \"styles/*\" ../../build/spotfire-wrapper/styles",
     "copy:collection": "cp -v schematics/collection.json ../../build/spotfire-wrapper/schematics/collection.json",
-    "postbuild": "npm run copy:schemas && npm run copy:files && npm run copy:tps && npm run copy:styles && npm run copy:collection"
+    "postbuild": "npm run copy:schemas && npm run copy:files && npm run copy:styles && npm run copy:collection"
   },
   "peerDependencies": {
     "@angular/common": "^8.0.0",
