--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spotfire-wrapper",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -16,11 +16,7 @@
     "sptf:build": "npm run sptf:buildlib && npm run sptf:buildschematics",
     "build:lib": "npm run sptf:build && (cd build/spotfire-wrapper ; npm pack ; ls -l *tgz) && npm install --no-save build/spotfire-wrapper/*tgz && date"
   },
-  "author": {
-    "name": "Nicolas Deroche",
-    "email": "nderoche@tibco.com",
-    "url": "http://www.tibco.com"
-  },
+  "author": "Nicolas Deroche <nderoche@tibco.com> (http://www.tibco.com)",
   "private": false,
   "dependencies": {
     "@angular/animations": "8.1.0",
@@ -68,7 +64,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TIBCOSoftware/spotfire-wrapper"
+    "url": "git+https://github.com/TIBCOSoftware/spotfire-wrapper.git"
   },
-  "homepage": "https://github.com/TIBCOSoftware/spotfire-wrapper"
+  "homepage": "https://github.com/TIBCOSoftware/spotfire-wrapper",
+  "description": "Wrapper for TIBCO Spotfire(R) library and package.",
+  "bugs": {
+    "url": "https://github.com/TIBCOSoftware/spotfire-wrapper/issues"
+  },
+  "main": "build-script.js",
+  "keywords": [
+    "TIBCO",
+    "Spotfire"
+  ],
+  "license": "BSD-3-Clause"
 }
