Add reportingEvent output param to export dashboard as pdf, image, ... Set version to 0.8.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spotfire-wrapper",
-  "version": "0.7.3",
+  "version": "0.8.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -19,48 +19,47 @@
   "author": "Nicolas Deroche <nderoche@tibco.com> (http://www.tibco.com)",
   "private": false,
   "dependencies": {
-    "@angular/animations": "8.1.0",
-    "@angular/cdk": "8.0.2",
-    "@angular/common": "8.1.0",
-    "@angular/compiler": "8.1.0",
-    "@angular/core": "8.1.0",
-    "@angular/elements": "8.1.0",
-    "@angular/flex-layout": "8.0.0-beta.26",
-    "@angular/forms": "8.1.0",
-    "@angular/material": "8.0.2",
-    "@angular/platform-browser": "8.1.0",
-    "@angular/platform-browser-dynamic": "8.1.0",
-    "@webcomponents/custom-elements": "1.2.4",
-    "core-js": "3.1.4",
-    "rxjs": "6.5.2",
-    "zone.js": "0.9.1"
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/elements": "^8.2.14",
+    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/forms": "^8.2.14",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@webcomponents/custom-elements": "*",
+    "core-js": "^3.6.4",
+    "rxjs": "^6.5.4",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.801.0",
-    "@angular-devkit/build-ng-packagr": "0.801.0",
-    "@angular/cli": "8.1.0",
-    "@angular/compiler-cli": "8.1.0",
-    "@angular/language-service": "8.1.0",
-    "@types/jasmine": "3.3.13",
-    "@types/jasminewd2": "2.0.6",
-    "@types/node": "12.6.2",
-    "codelyzer": "5.0.1",
-    "concat": "1.0.3",
-    "cpx": "1.5.0",
-    "fs-extra": "8.1.0",
-    "jasmine-core": "3.4.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.1.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.0.5",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.2",
-    "ng-packagr": "5.1.0",
-    "ts-node": "8.3.0",
-    "tsickle": "0.35.0",
-    "tslib": "1.10.0",
-    "tslint": "5.18.0",
-    "typescript": "3.4.3"
+    "@angular-devkit/build-angular": "^0.803.24",
+    "@angular-devkit/core": "^8.3.25",
+    "@angular-devkit/build-ng-packagr": "^0.801.0",
+    "@angular/cli": "^8.3.24",
+    "@angular/compiler-cli": "^8.2.14",
+    "@types/jasmine": "^3.5.6",
+    "@types/node": "^12.12.28",
+    "codelyzer": "^5.2.1",
+    "concat": "^1.0.3",
+    "cpx": "^1.5.0",
+    "fs-extra": "^8.1.0",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^4.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "ng-packagr": "^5.1.0",
+    "ts-node": "^8.6.2",
+    "tsickle": "^0.35.0",
+    "tslib": "^1.11.1",
+    "tslint": "^5.20.1",
+    "typescript": "<3.6"
   },
   "repository": {
     "type": "git",
