--- a/demo1/tsconfig.app.json
+++ b/demo1/tsconfig.app.json
@@ -3,5 +3,12 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "types": []
-  }
+  },
+  "files": [
+    "main.ts",
+    "polyfills.ts"
+  ],
+  "include": [
+    "demo1/**/*.d.ts"
+  ]
 }
