--- a/package.json
+++ b/package.json
@@ -19,31 +19,32 @@
   "author": "Nicolas Deroche <nderoche@tibco.com> (http://www.tibco.com)",
   "private": false,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
+    "@angular/animations": "^9.1.12",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/elements": "^8.2.14",
-    "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "^8.2.14",
+    "@angular/common": "^9.1.12",
+    "@angular/compiler": "^9.1.12",
+    "@angular/core": "^9.1.12",
+    "@angular/elements": "^9.1.12",
+    "@angular/flex-layout": "^9.0.0-beta.31",
+    "@angular/forms": "^9.1.12",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/platform-browser": "^9.1.12",
+    "@angular/platform-browser-dynamic": "^9.1.12",
     "@webcomponents/custom-elements": "*",
     "core-js": "^3.6.4",
     "rxjs": "^6.5.4",
-    "zone.js": "^0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.29",
-    "@angular-devkit/core": "^8.3.25",
-    "@angular-devkit/build-ng-packagr": "^0.803.29",
-    "@angular/cli": "^8.3.29",
-    "@angular/compiler-cli": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.901.12",
+    "@angular-devkit/core": "^9.1.12",
+    "@angular-devkit/build-ng-packagr": "~0.901.12",
+    "@angular/cli": "^9.1.12",
+    "@angular/compiler-cli": "^9.1.12",
     "@types/jasmine": "^3.5.6",
-    "@types/node": "^12.12.28",
-    "codelyzer": "^5.2.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "concat": "^1.0.3",
     "cpx": "^1.5.0",
     "fs-extra": "^8.1.0",
@@ -54,12 +55,10 @@
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^5.1.0",
+    "ng-packagr": "^9.0.0",
     "ts-node": "^8.6.2",
-    "tsickle": "^0.35.0",
-    "tslib": "^1.11.1",
     "tslint": "^5.20.1",
-    "typescript": "<3.6"
+    "typescript": "3.8.3"
   },
   "repository": {
     "type": "git",
