ng upgrade Angular to version 10

--- a/projects/spotfire-wrapper/package.json
+++ b/projects/spotfire-wrapper/package.json
@@ -31,5 +31,8 @@
   "bugs": {
     "url": "https://github.com/TIBCOSoftware/spotfire-wrapper/issues"
   },
-  "main": "build-script.js"
+  "main": "build-script.js",
+  "dependencies": {
+    "tslib": "^2.0.0"
+  }
 }
