--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
   "author": "Nicolas Deroche <nderoche@tibco.com> (http://www.tibco.com)",
   "private": false,
   "dependencies": {
-    "@angular/animations": "^9.1.12",
+    "@angular/animations": "^10.0.8",
     "@angular/cdk": "^9.2.4",
-    "@angular/common": "^9.1.12",
-    "@angular/compiler": "^9.1.12",
-    "@angular/core": "^9.1.12",
-    "@angular/elements": "^9.1.12",
+    "@angular/common": "^10.0.8",
+    "@angular/compiler": "^10.0.8",
+    "@angular/core": "^10.0.8",
+    "@angular/elements": "^10.0.8",
     "@angular/flex-layout": "^9.0.0-beta.31",
-    "@angular/forms": "^9.1.12",
+    "@angular/forms": "^10.0.8",
     "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "^9.1.12",
-    "@angular/platform-browser-dynamic": "^9.1.12",
+    "@angular/platform-browser": "^10.0.8",
+    "@angular/platform-browser-dynamic": "^10.0.8",
     "@webcomponents/custom-elements": "*",
     "core-js": "^3.6.4",
     "rxjs": "^6.6.2",
@@ -37,28 +37,27 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.12",
-    "@angular-devkit/core": "^9.1.12",
-    "@angular-devkit/build-ng-packagr": "~0.901.12",
-    "@angular/cli": "^9.1.12",
-    "@angular/compiler-cli": "^9.1.12",
+    "@angular-devkit/build-angular": "~0.1000.5",
+    "@angular-devkit/build-ng-packagr": "~0.1000.5",
+    "@angular/cli": "^10.0.5",
+    "@angular/compiler-cli": "^10.0.8",
     "@types/jasmine": "^3.5.6",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "concat": "^1.0.3",
     "cpx": "^1.5.0",
     "fs-extra": "^8.1.0",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.5",
-    "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^9.0.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^10.0.0",
     "ts-node": "^8.6.2",
-    "tslint": "^5.20.1",
-    "typescript": "3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "3.9.7"
   },
   "repository": {
     "type": "git",
