--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "^9.1.12",
     "@angular/platform-browser-dynamic": "^9.1.12",
+    "@tibco/spotfire-wrapper": "^0.9.0",
     "@webcomponents/custom-elements": "*",
     "core-js": "^3.6.4",
     "rxjs": "^6.6.2",
