--- a/projects/spotfire-wrapper/package.json
+++ b/projects/spotfire-wrapper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tibco/spotfire-wrapper",
-  "version": "0.11.1",
+  "version": "0.11.2",
   "private": false,
   "scripts": {
     "build": "../../node_modules/.bin/tsc -p tsconfig.schematics.json",
@@ -14,9 +14,9 @@
   "peerDependencies": {
     "@angular/common": "^10.0.8",
     "@angular/core": "^10.0.8",
-    "@angular/cdk": "~10.1.2",
-    "@angular/material": "~10.1.2",
-    "@angular/flex-layout": "~10.0.0-beta.32"
+    "@angular/cdk": "^10.1.2",
+    "@angular/material": "^10.1.2",
+    "@angular/flex-layout": "^10.0.0-beta.32"
   },
   "schematics": "./schematics/collection.json",
   "author": "Nicolas Deroche <nderoche@tibco.com> (http://www.tibco.com)",
@@ -33,6 +33,9 @@
   "description": "Wrapper for TIBCO Spotfire(R) package.",
   "bugs": {
     "url": "https://github.com/TIBCOSoftware/spotfire-wrapper/issues"
+  },
+  "ng-add": {
+    "save": "devDependencies"
   },
   "main": "build-script.js",
   "dependencies": {
